<resources>
    <string name="app_name">איחוד הצלה כרמל</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">איחוד הצלה כרמל</string>
    <string name="nav_header_subtitle">במקרה חרום חייג 1221</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">הגדרות</string>
    <string name="no_waze_installed">וויז לא מותקן</string>
    <string name="nav_locations_label">מיקומים</string>
    <string name="nav_warhouse_group_title">מחסן</string>
    <string name="nav_orders_label">הזמנות</string>
    <string name="nav_new_order_label">הזמנה חדשה</string>
    <string name="send_order_button_label">שלח הזמנה</string>
    <string name="preference_file_key">uhcareml_so</string>
    <string name="user_uid_key">SP_USER_UID</string>
    <string name="display_name_key">SP_USER_DISPLAY_NAME</string>
    <string name="is_admin">SP_USER_IS_ADMIN</string>
    <string name="is_shabat_admin">SP_USER_IS_SHABAT_ADMIN</string>
    <string name="is_wh_admin">SP_USER_IS_WH_ADMIN</string>
    <string name="user_mirs">SP_USER_MIRS</string>
    <string name="order_success">ההזמנה נשלחה בהצלחה</string>
    <string name="new_order_no_items">לא סומנו שום פריטים</string>
    <string name="title_order_list">הזמנות</string>
    <string name="title_order_detail">פרטי הזמנה</string>
    <string name="signed_id">נרשמת בהצלחה</string>
    <string name="action_call_1221">התקשר 1221</string>
    <string name="action_goto_fb">בקר בעמוד הפייסבוק שלנו</string>
    <string name="action_send_my_location">שלח את המיקום שלך</string>
    <string name="my_location">המיקום שלי</string>
    <string name="no_location_detected">לא נמצא מיקום</string>
    <string name="permission_rationale">על מנת לשלוח את המיקום שלך האפליקציה זקוקה לאישור כישה למיקום של המכשיר</string>
    <string name="permission_denied_explanation">לא ניתן לקבל הרשאה למיקום</string>
    <string name="settings">הגדרות</string>
    <string name="send_location_question">שלח את המיקום</string>
    <string name="location_found">המיקום נמצא</string>
    <string name="looking_for_location">מחפש מיקום</string>
    <string name="united_phone_number">1221</string>
    <string name="sp_last_name">SP_USER_LAST_NAME</string>
    <string name="sp_first_name">SP_USER_FIRST_NAME</string>
    <string name="title_activity_shabat_register">ShabatRegisterActivity</string>
    <string name="shabat_spiner_tv_text">עיר</string>
    <string name="shabat_spiner_tv_comment">הערות</string>
    <string name="shabat_spiner_tv_address">כתובת</string>
    <string name="shabat_firstname_label">שם</string>
    <string name="shabat_lastname_label">משפחה</string>
    <string name="shabat_drawer_title">שבת</string>
    <string name="nav_shabat_title">רישום לשבת</string>
    <string name="FIREBASE_DATABASE_PREFIX">production</string>
</resources>
